@@ -1,3 +1,10 @@
+2001-09-15  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* lib/ld-lib.exp (run_dump_test): Handle new option
+	"objcopy_linked_file".  Return after failing, if errors were
+	expected but none were found.
+	(slurp_options): Support underscores in option names.
+
 2001-09-14  H.J. Lu  <hjl@gnu.org>
 
 	* ld-elfweak/bar.c: Updated.
